- change folder name from "modules" to "components" - repair button on mobile

--- a/src/scss/components/button.scss
+++ b/src/scss/components/button.scss
@@ -2,6 +2,7 @@
     text-decoration: none;
     font-size: 2.4rem;
     padding: 10px 20px;
+    display: inline-block;
     &--primary {
         @include button(#FFF, $color-dark);
     }
